# tauri-plugin-async-wrapper

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
